packages/next-swc/crates/core/tests/errors/server-actions/1/output.js
/* __next_internal_action_entry_do_not_use__ foo */ export function foo() {}
foo.$$typeof = Symbol.for("react.server.reference");
foo.$$filepath = "/app/item.js";
foo.$$name = "foo";
foo.$$bound = [];